--- a/views/css/styles.css
+++ b/views/css/styles.css
@@ -1,3 +1,10 @@
+ * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    outline: none;
+ }
+ 
  body {
      font-family: sans-serif;
      background-color: #f5f5f5;
@@ -157,10 +164,14 @@
  .incorrecto{
     width: 100%;
     height: 30px;
-    background-color: red;
+    background-color: rgb(235, 117, 166);
     color: white;
     display: flex;
     justify-content: center;
     align-items: center;
+ }
+
+  .correcto{
+    background-color:transparent;  
  }
 
